--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -9,9 +9,6 @@
         android:id="@+id/content_detail_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
         tools:context="com.vardanian.movieapp.DetailMovieActivityFragment"
         tools:showIn="@layout/activity_detail_movie">
 
@@ -22,13 +19,14 @@
             android:padding="4dp"
             android:text="Movie Title"
             android:gravity="center"
-            style="@style/Base.TextAppearance.AppCompat.Headline"/>
+            style="@style/Title"/>
 
         <ImageView
             android:id="@+id/detail_poster"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_title"/>
+            android:layout_below="@+id/detail_title"
+            android:adjustViewBounds="true"/>
 
         <TextView
             android:id="@+id/detail_overview"
