--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -9,7 +9,7 @@
         android:id="@+id/content_detail_movie"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.vardanian.movieapp.DetailMovieActivityFragment"
+        tools:context="com.vardanian.movieapp.view.detailMovie.DetailMovieActivityFragment"
         tools:showIn="@layout/activity_detail_movie">
 
         <TextView
