--- a/app/src/main/res/layout/fragment_detail_movie.xml
+++ b/app/src/main/res/layout/fragment_detail_movie.xml
@@ -1,55 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/content_detail_movie"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/content_detail_movie"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/cardview_dark_background"
+    tools:context="com.vardanian.movieapp.view.detailMovie.DetailMovieActivityFragment"
+    tools:showIn="@layout/activity_detail_movie">
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinator_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.vardanian.movieapp.view.detailMovie.DetailMovieActivityFragment"
-        tools:showIn="@layout/activity_detail_movie">
+        android:transitionName="@string/transition_card">
 
-        <TextView
-            android:id="@+id/detail_title"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:text="Movie Title"
-            android:gravity="center"
-            style="@style/Title"/>
+            android:layout_height="@dimen/detail_backdrop_height"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        <ImageView
-            android:id="@+id/detail_poster"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_title"
-            android:adjustViewBounds="true"/>
+            <android.support.design.widget.CollapsingToolbarLayout
+                android:id="@+id/collapsing_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleMarginEnd="64dp"
+                app:expandedTitleMarginStart="48dp"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:titleEnabled="false">
 
-        <TextView
-            android:id="@+id/detail_overview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_poster"
-            android:padding="4dp"
-            android:text="Movie Overview" />
+                <ImageView
+                    android:id="@+id/detail_backdrop"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/movie_item_description"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/ic_pictures_512"
+                    app:layout_collapseMode="parallax"></ImageView>
 
-        <TextView
-            android:id="@+id/detail_release_date"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_overview"
-            android:padding="4dp"
-            android:text="Movie Release Date" />
+            </android.support.design.widget.CollapsingToolbarLayout>
+        </android.support.design.widget.AppBarLayout>
 
-        <TextView
-            android:id="@+id/detail_popularity"
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scrollview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/detail_release_date"
-            android:padding="4dp"
-            android:text="Movie Popularity" />
-    </RelativeLayout>
-</ScrollView>
+            android:layout_height="match_parent"
+            android:fillViewport="true"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/movie_poster"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp">
+
+                    <ImageView
+                        android:id="@+id/detail_poster"
+                        android:layout_width="wrap_content"
+                        android:layout_height="285dp"
+                        android:layout_below="@+id/detail_title"
+                        android:adjustViewBounds="true"
+                        android:src="@drawable/ic_pictures_512" />
+                </android.support.v7.widget.CardView>
+
+                <TextView
+                    android:id="@+id/detail_title"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/movie_poster"
+                    android:gravity="center"
+                    android:padding="4dp"
+                    android:text="Movie Title"
+                    android:textColor="@color/cardview_light_background" />
+
+                <TextView
+                    android:id="@+id/detail_release_date"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/detail_title"
+                    android:layout_toRightOf="@id/movie_poster"
+                    android:padding="4dp"
+                    android:text="Movie Release Date"
+                    android:textColor="@color/cardview_light_background" />
+
+                <TextView
+                    android:id="@+id/detail_popularity"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/detail_release_date"
+                    android:layout_toRightOf="@id/movie_poster"
+                    android:padding="4dp"
+                    android:text="Movie Popularity"
+                    android:textColor="@color/cardview_light_background" />
+
+                <TextView
+                    android:id="@+id/detail_vote_average"
+                    style="@style/Base.TextAppearance.AppCompat.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/detail_popularity"
+                    android:layout_toRightOf="@id/movie_poster"
+                    android:padding="4dp"
+                    android:text="Movie Vote Average"
+                    android:textColor="@color/cardview_light_background" />
+
+                <TextView
+                    android:id="@+id/detail_overview"
+                    style="@style/TextAppearance.AppCompat.Body2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/movie_poster"
+                    android:padding="4dp"
+                    android:text="Movie Overview"
+                    android:textColor="@color/cardview_light_background" />
+            </RelativeLayout>
+        </android.support.v4.widget.NestedScrollView>
+    </android.support.design.widget.CoordinatorLayout>
+
+</RelativeLayout>
